<resources>
    <string name="app_name">TheCocktailDb</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="icon_description">leaf</string>
    <string name="app_title">TheCocktailDb</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="hello">Hello, %s !</string>
    <string name="drink_image">Drink Image</string>
    <string name="nothing_found">Nothing found !</string>
    <string name="delete">Delete</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="ingredient_hint">Ingredient</string>
    <string name="measure_hint">Measure</string>
    <string name="add">Add</string>
    <string name="clear_all">Clear All</string>
    <string-array name="search_filter">
        <item>name</item>
        <item>ingredient</item>
        <item>id</item>
    </string-array>
</resources>