<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.CocktailDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="Sex on the beach" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/delete_btn"
        app:layout_constraintTop_toBottomOf="@id/toolbarContainer">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:contentDescription="@string/drink_image"
            android:scaleType="centerCrop"

            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageButton
            android:id="@+id/favorite_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/circle"

            android:contentDescription="@string/drink_image"
            android:scaleType="centerCrop"

            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintEnd_toEndOf="@id/image"
            app:layout_constraintStart_toStartOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <ImageView
            android:id="@+id/favorite_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/drink_image"

            android:scaleType="centerCrop"
            android:src="@drawable/favorite"


            app:layout_constraintBottom_toBottomOf="@id/favorite_btn"
            app:layout_constraintEnd_toEndOf="@id/favorite_btn"
            app:layout_constraintStart_toStartOf="@id/favorite_btn"
            app:layout_constraintTop_toTopOf="@id/favorite_btn" />

        <TextView
            android:id="@+id/ingredients_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ingredients_title"

            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite_btn" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            app:layout_constraintTop_toBottomOf="@id/ingredients_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/description">

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:hint="@string/ingredient_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:hint="@string/measure_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/add_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/add"
                android:contentDescription="@string/add" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>